syntax = "proto3";
package product;
import "resources.proto";

option java_package = "dev.techdozo.product.api";



service ProductService {
  rpc getProduct(GetProductRequest) returns (GetProductResponse);
}